# finetuning

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  RUN.md  chat_sft.py  dry_run.py  fsdp_load_model.py  grpo_infer.py  grpo_train.py  if_eval.py  if_train.py  load_model.py  mopd_train.py  pyproject.toml  smoke_run.py  swe_rl_eval.py  swe_rl_train.py
.claude/skills/read-arxiv-paper/: SKILL.md
configs/gsm8k_rl/: nemotron_cascade2_paper.yaml
configs/if_rl/: nemotron_cascade2_paper.yaml
configs/mopd/: nemotron_cascade2_paper.yaml
configs/multi_domain_rl/: nemotron_cascade2_paper.yaml
configs/swe_rl/: nemotron_cascade2_paper.yaml
dev/: check_nccl.py  pretty_jsonl.py  sample.jsonl  smoke_rollout_client.py  vllm.py
envs/trainer/: pyproject.toml
envs/vllm-server/: pyproject.toml
scripts/: distill.py  gsm8k_train.py  if_eval.py  if_eval_to_md.py  if_train.py  mopd_eval.py  mopd_train.py  multi_domain_rl_eval.py  multi_domain_rl_train.py  sc.py  setup.sh  swe_rl_eval.py  swe_rl_train.py  train_grpo.sh  train_rl.py  uv_setup.sh
setup/: bootstrap_envs.sh  install_flash_attn3.sh  run_trainer.sh  setup.sh  start_vllm.sh
tasks/: IF_EVAL.py  common.py  ifrl.py
utils/: attention.py  openai_server.py  rollout_client.py  vllm_sync.py  vllm_weight_sync.py
