[project]
name = "finetuning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch==2.10.0",
    "transformers>=5.5.2",
    "datasets>=4.8.4",
    "pyyaml",
    "vllm>=0.19.0",
    "openai",
    "wandb",
    "python-dotenv>=1.2.2",
    "huggingface_hub>=1.10.1"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tasks", "scripts"]   # list each folder
