[project]
name = "finetuning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch==2.10.0",
    "transformers==4.57.3",
    "datasets==4.8.4",
    "pyyaml==6.0.3",
    "vllm==0.19.0; sys_platform != 'win32'",
    "openai==2.31.0",
    "wandb==0.25.1",
    "python-dotenv==1.2.2",
    "huggingface_hub>=0.34.0,<1.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tasks", "scripts"]   # list each folder
