[project]
name = "finetuning-trainer"
version = "0.1.0"
description = "Trainer environment for RL finetuning scripts"
readme = "../../README.md"
requires-python = ">=3.10"
dependencies = [
    "torch==2.10.0",
    "transformers",
    "datasets==4.8.4",
    "langdetect>=1.0.9,<2",
    "pyyaml==6.0.3",
    "openai==2.31.0",
    "wandb==0.25.1",
    "python-dotenv==1.2.2",
    "huggingface_hub>=0.34.0,<1.0",
    "psutil",
    "pyzmq",
    "pybase64",
    "requests",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
